deployment-wordpress-mysql.yaml
---
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  annotations: {}
  name: "wordpress-mysql"
  labels:
    app: "wordpress"
    app.kubernetes.io/name: "wordpress"
    app.kubernetes.io/component: "deployment.wordpress-mysql"
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: "wordpress"
      tier: "mysql"
    matchExpressions: []
  strategy:
    type: "Recreate"
  template:
    metadata:
      annotations: {}
      labels:
        app: "wordpress"
        tier: "mysql"
        app.kubernetes.io/name: "wordpress"
        app.kubernetes.io/component: "deployment.wordpress-mysql"
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector: {}
      volumes:
      - name: "mysql-persistent-storage"
        persistentVolumeClaim:
          claimName: "mysql-pv-claim"
      containers:
      - name: "mysql"
        image: "mysql:8.0"
        command: []
        args: []
        ports:
        - name: "mysql"
          containerPort: 3306
          protocol: "TCP"
        volumeMounts:
        - name: "mysql-persistent-storage"
          mountPath: "/var/lib/mysql"
