service-wordpress-mysql.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  name: "wordpress-mysql"
  labels:
    app: "wordpress"
    app.kubernetes.io/name: "wordpress"
spec:
  clusterIP: "None"
  externalIPs: []
  loadBalancerSourceRanges: []
  type: "ClusterIP"
  selector:
    app: "wordpress"
    tier: "mysql"
  ports:
  - port: 3306
