service-wordpress.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  name: "wordpress"
  labels:
    app: "wordpress"
    app.kubernetes.io/name: "wordpress"
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  type: "ClusterIP"
  selector:
    app: "wordpress"
    tier: "frontend"
  ports:
  - port: 80
